[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/origin/fairfaxstation/FairfaxStationNF.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.501961, 0, 0.501961 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.501961, 0, 0, 0.501961 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 768.0
margin_right = 1022.0
margin_bottom = 64.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 160.0
margin_right = 608.0
margin_bottom = 264.0
grow_horizontal = 2
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 80.0
grow_horizontal = 2
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 116.0
margin_right = 128.0
margin_bottom = 144.0
grow_horizontal = 2
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="VersionLabel" type="Label" parent="."]
margin_left = 896.0
margin_top = 416.0
margin_right = 1024.0
margin_bottom = 480.0
text = "v0.0.6a"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="ProgressBar" parent="."]
visible = false
margin_right = 192.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="item_selected" from="LanguageButton" to="." method="_on_LanguageButton_item_selected"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
